# rumicos

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_DETAILS.md  LICENSE-APACHE  LICENSE-MIT  README.md  limine.conf  run-tests.sh
.cargo/: config.toml
.github/workflows/: pages.yml
benchmarks/: README.md
crates/apic/: Cargo.toml
crates/apic/src/: ioapic.rs  ipi.rs  lapic.rs  lib.rs  pic.rs  pit.rs  timer.rs
crates/arch-x86_64/: Cargo.toml
crates/arch-x86_64/src/: atomic128.rs  cache.rs  cpu.rs  cycles.rs  lib.rs  msr.rs  tlb.rs  xsave.rs
crates/cpu/: Cargo.toml  build.rs
crates/cpu/src/: gdt.rs  idt.rs  lib.rs  percpu.rs  syscall.rs  tss.rs
crates/fs/: Cargo.toml
crates/fs/src/: cpio.rs  dentry.rs  devfs.rs  fd.rs  lib.rs  mount.rs  pagecache.rs  pipe.rs  ramfs.rs  syscall.rs  vnode.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: descriptor.rs  lib.rs  mpsc.rs  spsc.rs  wait.rs
crates/keyboard/: Cargo.toml
crates/keyboard/src/: lib.rs  scancode.rs
crates/memory/: Cargo.toml
crates/memory/src/: buddy.rs  constants.rs  lib.rs  pcid.rs  slab.rs  tagged_stack.rs
crates/paging/: Cargo.toml  README.md
crates/paging/src/: address.rs  allocator.rs  entry.rs  init.rs  lib.rs  mmio.rs  table.rs  tlb.rs
crates/pci/: Cargo.toml
crates/pci/src/: config.rs  lib.rs  msix.rs
crates/proc/: Cargo.toml
crates/proc/src/: address_space.rs  clone.rs  cow.rs  elf.rs  exec.rs  fd.rs  fork.rs  lib.rs  pagefault.rs  process.rs  ptable.rs  shootdown.rs  signal.rs  syscall.rs  ustack.rs  vma.rs  wait.rs
crates/sched/: Cargo.toml
crates/sched/src/: block.rs  futex.rs  idle.rs  lib.rs  percpu.rs  queue.rs  steal.rs  switch.rs  thread.rs  waitqueue.rs
crates/smp/: Cargo.toml
crates/smp/src/: acpi.rs  ap_entry.rs  cpuinfo.rs  lib.rs  trampoline.rs
crates/sync/: Cargo.toml
crates/sync/src/: backoff.rs  lib.rs  seqlock.rs  spin.rs
crates/virtio/: Cargo.toml
crates/virtio/src/: device.rs  lib.rs  net.rs  queue.rs
docs/: architecture-notes.md  cpu.md  fork-cow-mmap.md  miscompile-audit.md  network-stack-decision.md  pagecache.md  shell-checkpoint.md  site_network_repositioning_prompt.txt  smp-scheduling-diagnosis.md  verification.md  virtio_net_prompt.txt
docs/miscompile-evidence/: kernel-sys_fork-name-shred.s  repro-case_a-stride2-shred.s
init/: Makefile  init.asm  init.elf
initrd/: Makefile  init2.asm  init2.elf  initrd.cpio  testfile.txt
kernel/: Cargo.toml
kernel/linker/: x86_64.ld
kernel/src/: address.rs  init.rs  limine.rs  main.rs
miscompile-repro/: Cargo.toml  README.md  run-matrix.sh
miscompile-repro/.cargo/: config.toml
miscompile-repro/src/: lib.rs  main.rs
run/: hits.txt
scripts/: ci.ps1  ci.sh  elf2rust.py
site/: index.html  style.css
site/en/: index.html
site/ru/: index.html
tests/: expected-boot.txt
userspace/: Cargo.toml
userspace/liblow/: Cargo.toml
userspace/liblow/src/: fmt.rs  lib.rs
userspace/shell/: Cargo.toml
userspace/shell/src/: exec.rs  input.rs  lib.rs  main.rs  parse.rs  selftest.rs
xtask/src/: main.rs
