[package]
name = "kernel"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "kernel"
path = "src/main.rs"
bench = false
test = false

[dependencies]
kernel-arch-x86_64 = { path = "../crates/arch-x86_64" }
kernel-cpu = { path = "../crates/cpu" }
kernel-ipc = { path = "../crates/ipc" }
kernel-memory = { path = "../crates/memory" }
kernel-sync = { path = "../crates/sync" }
kernel-paging = { path = "../crates/paging" }
kernel-proc = { path = "../crates/proc" }
kernel-apic = { path = "../crates/apic" }
kernel-pci = { path = "../crates/pci" }
kernel-keyboard = { path = "../crates/keyboard" }
kernel-smp = { path = "../crates/smp" }
kernel-sched = { path = "../crates/sched" }
    kernel-fs = { path = "../crates/fs" }
