[package]
name    = "kernel-fs"
version = "0.1.0"
edition.workspace   = true
license.workspace   = true
rust-version.workspace = true

[lib]
name = "kernel_fs"
path = "src/lib.rs"

[dependencies]
kernel-sync   = { path = "../sync"   }
kernel-memory = { path = "../memory" }
kernel-proc   = { path = "../proc"   }
# Pipes block/wake on WaitQueues (crates/fs/src/pipe.rs). No cycle:
# kernel-sched does not depend on kernel-fs.
kernel-sched  = { path = "../sched"  }
