[package]
name = "kernel-keyboard"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "kernel_keyboard"
path = "src/lib.rs"

[dependencies]
kernel-sync = { path = "../sync" }
# The blocking read parks on a WaitQueue and the IRQ handler wakes it; no
# cycle, kernel-sched does not depend on kernel-keyboard.
kernel-sched = { path = "../sched" }
kernel-apic = { path = "../apic" }
kernel-cpu = { path = "../cpu" }
