[package]
name = "kernel-smp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "kernel_smp"
path = "src/lib.rs"

[dependencies]
kernel-arch-x86_64 = { path = "../arch-x86_64" }
kernel-sync = { path = "../sync" }
kernel-memory = { path = "../memory" }
kernel-paging = { path = "../paging" }
kernel-cpu = { path = "../cpu" }
kernel-apic = { path = "../apic" }
kernel-sched = { path = "../sched" }
