[package]
name = "kernel-virtio"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "kernel_virtio"
path = "src/lib.rs"

[dependencies]
kernel-pci = { path = "../pci" }
kernel-memory = { path = "../memory" }
kernel-paging = { path = "../paging" }
kernel-sync = { path = "../sync" }
kernel-cpu = { path = "../cpu" }
kernel-apic = { path = "../apic" }
